--- a/simple_navigation/android/app/build.gradle
+++ b/simple_navigation/android/app/build.gradle
@@ -25,7 +25,8 @@ apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 32
+    ndkVersion flutter.ndkVersion
 
     lintOptions {
         disable 'InvalidPackage'
@@ -34,8 +35,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.simple_navigation"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 27
+        targetSdkVersion 32
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
