--- a/simple_navigation/pubspec.yaml
+++ b/simple_navigation/pubspec.yaml
@@ -14,7 +14,7 @@ description: A Flutter project which demonstrate simple navigation in Flutter
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -39,6 +39,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - asset/images/img_1.jpg
+    - asset/images/img_2.jfif
+    - asset/images/img_3.webp
+    - asset/images/img_4.jfif
+    - asset/images/img_5.jfif
+    - asset/images/img_6.jpg
+    - asset/images/img_7.webp
+    - asset/images/img_9.webp
 
   # To add assets to your application, add an assets section, like this:
   # assets:
